--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 5001",
-    "pages:build": "npx @cloudflare/next-on-pages@1",
+    "pages:build": "next build",
     "build": "next build",
     "start": "next start -p 5000",
     "lint": "eslint"
